fixed z-index

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -271,7 +271,11 @@ body{
   margin:0px;
 }
 
+#nodes {z-index:3;}
+#mover {z-index:2;}
+#canvas {z-index:1;}
 #chat_window {
+  z-index:0;
   position:fixed;
   height:123px;
   left:0px;
